# clapSlice

./: audio_orderer.py  audio_ordering_candidates_registry.py  beats.ipynb  chunk_smearer.py  clap-test-1.ipynb  clap-test-2.ipynb  clap-test-3-dua-lipa-externalised-debug.ipynb  clap-test-3-dua-lipa-externalised.ipynb  clap-test-3-dua-lipa-video-2.ipynb  clap-test-3-dua-lipa-video.ipynb  clap-test-3-dua-lipa.ipynb  clap-test-4.ipynb  clap-test-5.ipynb  clap-test-6-anderson-paak-externalised.ipynb  clap-test-6-anderson-paak.ipynb  clap-test-7-bon-iver.ipynb  clap_slice.ipynb  estimate_bpm.py  medoids_tsp.py  nz-music.ipynb  pyproject.toml  requirements.txt  run_clap_slice.py  video_builder.py  video_chunk_cache.py
clap_slice/: __init__.py  audio_chunker.py  audio_embeddings.py  audio_orderer.py  audio_ordering_candidates_registry.py  beat_detector.py  chunk_smearer.py  clap_slice.py  estimate_bpm.py  hungarian.py  medoids_tsp.py  video_builder.py  video_chunk_cache.py
src/clap_slice/: video_builder.py  video_chunk_cache.py
